fix(classroom): keep preparation off the shared virtual-thread scheduler
A preparation job is a long chain of blocking model calls that also writes to the database and to the engine's pipes. On a box with one carrier per core, running those on the shared scheduler means a wedged job can leave every other virtual thread - the chat page's work included - with nothing to run on.